lib/libc/include/namespace.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: namespace.h,v 1.204 2024/08/15 22:22:34 riastradh Exp $	*/
+/*	$NetBSD: namespace.h,v 1.205 2024/08/17 21:24:53 riastradh Exp $	*/
 
 /*-
  * Copyright (c) 1997-2004 The NetBSD Foundation, Inc.
@@ -224,7 +224,10 @@
 #define bm_comp			_bm_comp
 #define bm_exec			_bm_exec
 #define bm_free			_bm_free
+#define c16rtomb_l		_c16rtomb_l
 #define c32rtomb		_c32rtomb
+#define c32rtomb_l		_c32rtomb_l
+#define c8rtomb_l		_c8rtomb_l
 #define callrpc			_callrpc
 #define cdbr_close		_cdbr_close
 #define cdbr_find		_cdbr_find
@@ -512,7 +515,10 @@
 #define lockf			_lockf
 #define lrand48			_lrand48
 #define lseek			_lseek
+#define mbrtoc16_l		_mbrtoc16_l
 #define mbrtoc32		_mbrtoc32
+#define mbrtoc32_l		_mbrtoc32_l
+#define mbrtoc8_l		_mbrtoc8_l
 #define membar_producer		_membar_producer
 #define mergesort		_mergesort
 #define mi_vector_hash		_mi_vector_hash
